--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,12 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
-    - name: Login to quay.io
-      run: docker login -u "${{ secrets.QUAY_IO_USERNAME }}" -p "${{ secrets.QUAY_IO_PASSWORD }}" quay.io
-    - name: Generate artifacts
-      run: make crd
+    - name: Login to Quay.io
+      uses: docker/login-action@v1
+      with:
+        registry: quay.io
+        username: ${{ secrets.QUAY_IO_USER }}
+        password: ${{ secrets.QUAY_IO_TOKEN }}
     - name: Build changelog from PRs with labels
       id: build_changelog
       uses: mikepenz/release-changelog-builder-action@v2
