--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
     - name: Run tests
-      run: make test
+      run: make integration-test
     - name: Upload code coverage report to Code Climate
       uses: paambaati/codeclimate-action@v2.7.5
       env:
