--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: statefulset-resize-controller-system
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: statefulset-resize-controller-
+namePrefix: statefulset-resize-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
