--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -18,9 +18,7 @@ spec:
       securityContext:
         runAsNonRoot: true
       containers:
-      - command:
-        - /manager
-        args:
+      - args:
         - --leader-elect
         image: controller:latest
         name: manager
