Fix persistentvolumeclaim RBAC

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -55,7 +55,7 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - persistentvolumeclaim
+  - persistentvolumeclaims
   verbs:
   - create
   - delete
