Fix typos in configuration used to generate controller ClusterRole

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,7 +9,7 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - serviceaccount
+  - serviceaccounts
   verbs:
   - create
   - delete
@@ -79,7 +79,7 @@ rules:
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
-  - rolebinding
+  - rolebindings
   verbs:
   - create
   - delete
