--- a/.github/changelog-configuration.json
+++ b/.github/changelog-configuration.json
@@ -1,30 +1,36 @@
 {
-    "pr_template": "- ${{TITLE}} (#${{NUMBER}})",
-    "categories": [
-        {
-            "title": "## 🚀 Features",
-            "labels": ["enhancement", "feature"]
-        },
-        {
-            "title": "## 🛠️ Minor Changes",
-            "labels": ["change"]
-        },
-        {
-            "title": "## 🔎 Breaking Changes",
-            "labels": ["breaking"]
-        },
-        {
-            "title": "## 🐛 Fixes",
-            "labels": ["bug", "fix"]
-        },
-        {
-            "title": "## 📄 Documentation",
-            "labels": ["documentation"]
-        },
-        {
-            "title": "## 🔗 Dependency Updates",
-            "labels": ["dependency"]
-        }
-    ],
-    "template": "${{CATEGORIZED_COUNT}} changes since ${{FROM_TAG}}\n\n${{CHANGELOG}}"
+  "pr_template": "- ${{TITLE}} (#${{NUMBER}})",
+  "categories": [
+    {
+      "title": "## 🚀 Features",
+      "labels": [
+        "minor"
+      ]
+    },
+    {
+      "title": "## 🔎 Breaking Changes",
+      "labels": [
+        "major"
+      ]
+    },
+    {
+      "title": "## 🐛 Fixes",
+      "labels": [
+        "patch"
+      ]
+    },
+    {
+      "title": "## 📄 Documentation",
+      "labels": [
+        "documentation"
+      ]
+    },
+    {
+      "title": "## 🔗 Dependency Updates",
+      "labels": [
+        "dependency"
+      ]
+    }
+  ],
+  "template": "${{CATEGORIZED_COUNT}} changes since ${{FROM_TAG}}\n\n${{CHANGELOG}}"
 }
